# cageinator

./: CBU_to_GBU.py  README.md  cageinator.py  coordinate_adder.py  cuboc_d3h.py  cuboctaeder.py  menu_mode.py  obabel_opt.py  pyproject.toml  xtb_opt.sh
cage_assemblers/: lantern.py  octaeder.py
calculation/: xtb_opt.py
interfaces/: cli_mode.py
utility_functions/: json_outline_creator.py
